2003-07-02  Bolian Yin <bolian.yin@sun.com>

	Fixes #45328, #45329

	* gui/e-day-view.c (e_day_view_do_key_press): Do not process
	PageUp/PageDown, .. when the Alt key is pressed (give key binding
	set the chance).
	* gui/gnome-cal.h : define new enum type, GNOME_CAL_GOTO_DATE_TYPE.
	* gui/gnome-cal.c (gnome_calendar_class_init): define new signal
	 "goto_date".  Add key bindings for "Alt+PageUp/PageDown",
	 "Alt+Home/End".
	(gnome_calendar_goto_date): Impl. signal handler for "goto_date".

2003-07-01  Rodrigo Moya <rodrigo@ximian.com>

	Fixes #45524

	* gui/calendar-commands.c: use stock icons where approppriate.

	* gui/tasks-control.c: removed EPixmaps structure, since we only use
	stock icons now.
	(tasks_control_activate): no need to call e_pixmaps_update.

2003-07-01  Bolian Yin <bolian.yin@sun.com>

	Fixes #45274

	* gui/e-week-view.c: implemented tabbing though events in week view.

2003-06-30  Rodrigo Moya <rodrigo@ximian.com>

	* cal-client/cal-client.c: removed usage of WombatClient.
	(client_get_password_cb, client_forget_password_cb): removed.
	(real_open_calendar): don't create the WombatClient object.
	(cal_client_init, cal_client_finalize): removed WombatClient
	related code.
	(cal_client_finalize): re-enabled call to destroy_factories.

	* pcs/cal.c: removed usage of WombatClient interface.
	(cal_construct): don't get a reference to the WombatClient.
	(cal_get_password, cal_forget_password): removed unused functions.

	* conduits/calendar/Makefile.am:
	* cal-client/Makefile.am: removed references to libwombat.

2003-06-27  Rodrigo Moya <rodrigo@ximian.com>

	* gui/dialogs/send-comp.[ch] (send_component_dialog):
	* gui/dialogs/cancel-comp.[ch] (cancel_component_dialog): added a
	GtkWindow argument for callers to specify the parent window.

	* gui/dialogs/changed-comp.[ch] (changed_component_dialog): added
	'parent' argument and use GtkMessageDialog instead of
	gnome_question_dialog.

	* gui/e-calendar-table.c (e_calendar_table_delete_selected):